2007-05-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailUserRightsEditor.[hm]: new class module that
	provides a view to the IMAP acls.

	* UI/MailerUI/UIxMailFolderACLEditor.m: removed obsolete module.

	* UI/WebServerResources/MailerUI.js: replaced all invocations of
	addEventListener to the use of prototype's Event object. Also,
	configured all menus programmatically following descriptions lists
	containing their callbacks, or nulls, submenus id or separators.

2007-05-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxObjectActions.m ([UIxObjectActions
	-addUserInAclsAction]): save the previous roles of the user
	(unlikely) or the default roles, or None instead of saving the
	roles that should appear the first time in the role editor when no
	default has been set...

	* SoObjects/SOGo/SOGoObject.m: defined a new constant
	"SOGoDefaultUserID".

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
	-setRoles:rolesforUser:uidforObjectAtPath:objectPathArray]):
	ignore the "AuthorizedSubscriber" role and add the "None" role
	when no other role is found.

	* UI/Common/UIxAclEditor.m: added a button for the new default
	user roles feature.

	* UI/Common/UIxUserRightsEditor.m ([UIxUserRightsEditor
	-_initRights]): don't take the "None" role into account when
	initializing the list of current roles.

	* SoObjects/SOGo/SOGoPermissions.m: added a new void role
	"SOGoRole_None".

2007-05-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSString+Utilities.m ([NSString
	-_rangeOfURLInRange:refRange]): urls cannot end with "&" nor "=".
	There is no need to subscract the start from the length if a space
	is not found since the range has not changed either. Finally, the
	first character before the url might also be a tab or a cr, so we
	match it against the "urlAfterEndingChars" custom NSCharacterSet.
	([NSString -stringByDetectingURLs]): modified to handle email
	addresses and add a correct "mailto:" link.
