@@ -28,17 +28,25 @@
 #import <NGObjWeb/SoPermissions.h>
 
 extern NSString *SOGoRole_ObjectCreator;
+extern NSString *SOGoRole_ObjectReader;
 extern NSString *SOGoRole_ObjectEraser;
 extern NSString *SOGoRole_ObjectViewer;
 extern NSString *SOGoRole_ObjectEditor;
+extern NSString *SOGoRole_FolderCreator;
+extern NSString *SOGoRole_FolderEraser;
+extern NSString *SOGoRole_FolderViewer;
+extern NSString *SOGoRole_FolderReader;
 extern NSString *SOGoRole_AuthorizedSubscriber;
 extern NSString *SOGoRole_None;
-
 extern NSString *SOGoRole_FreeBusy;
 extern NSString *SOGoRole_FreeBusyLookup;
 
-extern NSString *SOGoPerm_ReadAcls;
-extern NSString *SOGoPerm_FreeBusyLookup;
+extern NSString *SOGoMailRole_SeenKeeper;
+extern NSString *SOGoMailRole_Writer;
+extern NSString *SOGoMailRole_Poster;
+extern NSString *SOGoMailRole_Expunger;
+extern NSString *SOGoMailRole_Creator;
+extern NSString *SOGoMailRole_Administrator;
 
 extern NSString *SOGoCalendarRole_Organizer;
 extern NSString *SOGoCalendarRole_Participant;
@@ -60,6 +68,9 @@ extern NSString *SOGoCalendarRole_ComponentViewer;
 extern NSString *SOGoCalendarRole_ComponentDAndTViewer;
 extern NSString *SOGoCalendarRole_ComponentModifier;
 extern NSString *SOGoCalendarRole_ComponentResponder;
+
+extern NSString *SOGoPerm_ReadAcls;
+extern NSString *SOGoPerm_FreeBusyLookup;
 
 extern NSString *SOGoCalendarPerm_ViewWholePublicRecords;
 extern NSString *SOGoCalendarPerm_ViewDAndTOfPublicRecords;
